--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JwtSettings": {
+    "Key": "8efb430d-9d65-4ffa-b234-ef4893a5f919",
+    "Issuer": "http://api.com",
+    "Audience": "messenger",
+    "MinutesToExpiration": "180"
   }
 }
