--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "8efb430d-9d65-4ffa-b234-ef4893a5f919",
+    "Issuer": "http://api.com",
+    "Audience": "messenger",
+    "MinutesToExpiration": "180"
+  }
 }
